<resources>
    <string name="app_name">My MQTT</string>
    <string name="port_number">Port NO :</string>
    <string name="client_id">Client Id</string>
    <string name="clean_session">clean session</string>
    <string name="keep_alive">keep alive</string>
    <string name="user_name">user name</string>
    <string name="password">Password</string>
    <string name="topic">Topic</string>
    <string name="message">Message</string>
    <string name="publish">PUBLISH NOW</string>
    <string name="subscribe">Get Message Now</string>

</resources>
